[metadata]
name = fragmented-mp4stream-pkg
version = 0.0.4
author = mkh
author_email = m.khomutov@list.ru
description = Service to stream mp4 files in fragments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/m-khomutov/pyfmp4
project_urls =
    Bug Tracker = https://github.com/m-khomutov/pyfmp4/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
