[metadata]
name = pytube-pkg
version = 0.0.1
author = mkh
author_email = m.khomutov@list.ru
description = Stores rtmp stream in mp4 format. Streams mp4 format (fMP4, HLS, MPEG-DASH, RTSP)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/m-khomutov/pytube
project_urls =
    Bug Tracker = https://github.com/m-khomutov/pytube/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    pytube = tube.service:start
